# CarreraSlice

./: CMakeLists.txt  README
src/: CMakeLists.txt  CMakeLists.txt~
src/KSegmentor/: CMakeLists.txt
src/KSegmentor/include/: KSegmentor3D.h  KSegmentorBase.h
src/KSegmentor/src/: KSegmentor3D.cpp  KSegmentorUtils.cpp
src/KViewerMain/: CMakeLists.txt
src/KViewerMain/exes/: CMakeLists.txt  CMakeLists.txt~  KViewer_desktop.cpp
src/KViewerMain/include/: KSandbox.h
src/carreraslice_wrap/: CMakeLists.txt  CMakeLists.txt~  CarreraSliceEffect.py  CarreraSliceEffect.py~  KSliceEffect.py  qSlicerCarreraSliceModule.cxx  qSlicerCarreraSliceModule.h  qSlicerCarreraSliceModuleWidget.cxx  qSlicerCarreraSliceModuleWidget.h  setUpSlicerDebug.py
src/carreraslice_wrap/Documentation/: VolumeMasker.py
src/carreraslice_wrap/Logic/: CMakeLists.txt  vtkKSlice.cpp  vtkKSlice.h  vtkSlicerKSliceLogic.h
src/carreraslice_wrap/Resources/UI/: qSlicerCarreraSliceFooBarWidget.ui  qSlicerCarreraSliceModule.ui
src/carreraslice_wrap/Widgets/: CMakeLists.txt  qSlicerCarreraSliceFooBarWidget.cxx  qSlicerCarreraSliceFooBarWidget.h  qSlicerKSliceFooBarWidget.cxx  qSlicerKSliceFooBarWidget.h
src/dijkstra_growcut/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  CMakeLists.txt~
src/dijkstra_growcut/AdaptiveDijkstraSegmenterCLI/: AdaptiveDijkstraSegmenter.h  AdaptiveDijkstraSegmenterCLI.xml  CMakeLists.txt
src/dijkstra_growcut/FastGrowCutCLI/: CMakeLists.txt  CMakeLists.txt~  FastGrowCut.h  FastGrowCut.hxx  FastGrowCutCLI.cxx  FastGrowCutCLI.xml  utilities.hxx
src/fastGrowCut/: CMakeLists.txt  qSlicerFastGrowCutSegmenterModule.cxx  qSlicerFastGrowCutSegmenterModule.h  qSlicerFastGrowCutSegmenterModuleWidget.cxx  qSlicerFastGrowCutSegmenterModuleWidget.h
src/fastGrowCut/Documentation/: FastGrowCutSegmenter.dox
src/fastGrowCut/Logic/: CMakeLists.txt  FastGrowCutSegmenter.hxx  KSandbox.h  vtkFastGrowCut.cxx  vtkFastGrowCut.h  vtkSlicerFastGrowCutSegmenterLogic.cxx  vtkSlicerFastGrowCutSegmenterLogic.h
src/fastGrowCut/Resources/: qSlicerFastGrowCutSegmenterModule.qrc
src/fastGrowCut/Resources/UI/: qSlicerFastGrowCutSegmenterFooBarWidget.ui  qSlicerFastGrowCutSegmenterModule.ui
src/fastGrowCut/Widgets/: qSlicerFastGrowCutSegmenterFooBarWidget.cxx  qSlicerFastGrowCutSegmenterFooBarWidget.h
src/sfm_local_chanvese/include/: energy3c.h  interactive_kurvolver.h  lsops3c.h
src/sfm_local_chanvese/src/: energy3c.cpp  interactive_kurvolver.cpp  lsops3c.cpp
src/tmp_dijkstra_growcut/: CMakeLists.txt  qSlicerAdaptiveDijkstraSegmenterModule.cxx  qSlicerAdaptiveDijkstraSegmenterModule.h  qSlicerAdaptiveDijkstraSegmenterModuleWidget.cxx  qSlicerAdaptiveDijkstraSegmenterModuleWidget.h
src/tmp_dijkstra_growcut/Logic/: AdaptiveDijkstraSegmenter.h  AdaptiveDijkstraSegmenter.hxx  AdaptiveDijkstraSegmenterCLI.cxx  CMakeLists.txt  utilities.h  utilities.hxx  vtkAdaptDijkstraGC.cpp  vtkAdaptDijkstraGC.h  vtkSlicerAdaptiveDijkstraSegmenterLogic.cxx  vtkSlicerAdaptiveDijkstraSegmenterLogic.h
src/tmp_dijkstra_growcut/Resources/: qSlicerAdaptiveDijkstraSegmenterModule.qrc
src/tmp_dijkstra_growcut/Resources/UI/: qSlicerAdaptiveDijkstraSegmenterFooBarWidget.ui  qSlicerAdaptiveDijkstraSegmenterModuleWidget.ui
src/tmp_dijkstra_growcut/Widgets/: qSlicerAdaptiveDijkstraSegmenterFooBarWidget.cxx  qSlicerAdaptiveDijkstraSegmenterFooBarWidget.h
